fix share dialog copy button icon alignment

--- a/css/context/contextmenu.css
+++ b/css/context/contextmenu.css
@@ -26,7 +26,7 @@
   backdrop-filter: blur(var(--blur-radius)) !important;
   background-blend-mode: exclusion !important;
   background-image: var(--acrylic) !important;
-  padding: 0 !important;
+  padding: 0px !important;
 }
 
 ._2EstNjFIIZm_WUSKm5Wt7n::after {
