--- a/css/dialog/share.css
+++ b/css/dialog/share.css
@@ -151,8 +151,8 @@
   width: 16px !important;
   line-height: 16px !important;
   content: var(--icon-clipboard) !important;
-  margin: auto !important;
-  padding: 11px !important;
+  margin: 8px !important;
+  padding: 0px !important;
 }
 
 .ytQqTkd5AxOMJlwopd6G- {
